[gd_scene load_steps=15 format=3 uid="uid://bdpl8fli78bpl"]

[ext_resource type="PackedScene" uid="uid://d2gb1ghqqi51h" path="res://assets/Man/Man.glb" id="1_ugvvu"]
[ext_resource type="Script" uid="uid://cir1p5t6vqime" path="res://scripts/player.gd" id="2_pfr4v"]
[ext_resource type="PackedScene" uid="uid://dx6t2o007wevr" path="res://sword.tscn" id="3_rb5kw"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rb5kw"]
radius = 0.2
height = 1.4

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gca12"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2x0nd"]
animation = &"run"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_ml447"]
blend_point_0/node = SubResource("AnimationNodeAnimation_gca12")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_2x0nd")
blend_point_1/pos = 1.0
min_space = 0.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6hl5u"]
animation = &"attack1"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rb5kw"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dqn0h"]
xfade_time = 0.01
advance_mode = 2
advance_condition = &"attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gca12"]
xfade_time = 0.01
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_m6ldf"]
states/BlendSpace1D/node = SubResource("AnimationNodeBlendSpace1D_ml447")
states/BlendSpace1D/position = Vector2(410, 100)
states/End/position = Vector2(635, 100)
states/Start/position = Vector2(199, 100)
states/attack1/node = SubResource("AnimationNodeAnimation_6hl5u")
states/attack1/position = Vector2(410, 189)
transitions = ["Start", "BlendSpace1D", SubResource("AnimationNodeStateMachineTransition_rb5kw"), "BlendSpace1D", "attack1", SubResource("AnimationNodeStateMachineTransition_dqn0h"), "attack1", "BlendSpace1D", SubResource("AnimationNodeStateMachineTransition_gca12")]
graph_offset = Vector2(-50.78908, 0)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_2x0nd"]
graph_offset = Vector2(-302, 59)
nodes/StateMachine/node = SubResource("AnimationNodeStateMachine_m6ldf")
nodes/StateMachine/position = Vector2(-180, 100)
node_connections = [&"output", 0, &"StateMachine"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ml447"]

[node name="Man" instance=ExtResource("1_ugvvu")]
script = ExtResource("2_pfr4v")

[node name="Skeleton3D" parent="Armature" index="0"]
unique_name_in_owner = true
bones/0/rotation = Quaternion(-0.021824481, 0, 0, 0.9997618)
bones/2/rotation = Quaternion(-0.10783839, -0.0100957155, 0.9674537, -0.22869697)
bones/3/rotation = Quaternion(0.08954688, -0.0043943436, -0.015656719, 0.99584985)
bones/5/rotation = Quaternion(0.0060319444, -0.024316033, 0.9985345, -0.04797266)
bones/5/scale = Vector3(1.0000538, 0.9999992, 1.0000136)
bones/6/rotation = Quaternion(-0.04001728, 0.00090636365, -0.024715235, 0.99889284)
bones/6/scale = Vector3(0.99999976, 1.0000004, 1)
bones/7/rotation = Quaternion(0.59938014, 0.07649308, 0.038757794, 0.79585814)
bones/7/scale = Vector3(1.0000067, 1.0000116, 1.0000033)
bones/8/rotation = Quaternion(0.16623998, 0.4346674, 0.88012385, -0.0938649)
bones/9/rotation = Quaternion(-0.31027743, 0.3600579, 0.15898912, 0.8653373)
bones/10/rotation = Quaternion(-0.52456254, -0.2712819, 0.34850255, 0.7278642)
bones/11/rotation = Quaternion(-0.0060319146, -0.024316033, 0.9985345, 0.047972657)
bones/11/scale = Vector3(1.0000538, 0.9999992, 1.0000136)
bones/12/rotation = Quaternion(-0.040017277, -0.0009063633, 0.024715235, 0.99889284)
bones/13/rotation = Quaternion(0.59938014, -0.07649303, -0.038757823, 0.79585814)
bones/13/scale = Vector3(1.0000067, 1.0000116, 1.0000032)

[node name="head" type="BoneAttachment3D" parent="Armature/Skeleton3D" index="1"]
transform = Transform3D(1, 0, 2.3841864e-07, 5.2117503e-08, 0.97581536, -0.2185966, -2.3265257e-07, 0.2185966, 0.97581536, 0, 1.6163, -0.025439033)
bone_name = "head"
bone_idx = 1

[node name="Camera_container" type="Node3D" parent="Armature/Skeleton3D/head" index="0"]
transform = Transform3D(-1, -3.5527137e-14, -8.7422904e-08, 0, 0.9999995, 1.4901161e-08, 8.742276e-08, 1.4901161e-08, -0.9999995, -3.6332217e-08, 0.19551933, 0.1523882)

[node name="Player_camera" type="Camera3D" parent="Armature/Skeleton3D/head/Camera_container" index="0"]

[node name="RayCast3D" type="RayCast3D" parent="Armature/Skeleton3D/head/Camera_container" index="1"]
target_position = Vector3(0, 0, -1)

[node name="right_hand" type="BoneAttachment3D" parent="Armature/Skeleton3D" index="2"]
transform = Transform3D(0.0028086612, 0.45927635, 0.88829017, -0.9943658, -0.092845775, 0.05114871, 0.105965294, -0.88342863, 0.4564269, 0.10123617, 1.1396229, 0.22853492)
bone_name = "hand.r"
bone_idx = 10

[node name="Weapon_container" type="Node3D" parent="Armature/Skeleton3D/right_hand" index="0"]
transform = Transform3D(0.26686257, 0.5162382, 0.81380534, 0.9634385, -0.16383183, -0.21200277, 0.023883492, 0.84062904, -0.54108423, -0.07246739, 0.09989506, -0.13917859)

[node name="sword" parent="Armature/Skeleton3D/right_hand/Weapon_container" index="0" instance=ExtResource("3_rb5kw")]

[node name="weapon_hitbox" type="Area3D" parent="Armature/Skeleton3D/right_hand/Weapon_container/sword" index="1"]
transform = Transform3D(1, 2.9802322e-08, -7.450581e-09, 2.9802322e-08, 1, 1.4901161e-08, 0, 0, 1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Armature/Skeleton3D/right_hand/Weapon_container/sword/weapon_hitbox" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.56, 0)
shape = SubResource("CapsuleShape3D_rb5kw")
disabled = true

[node name="AnimationTree" type="AnimationTree" parent="." index="2"]
tree_root = SubResource("AnimationNodeBlendTree_2x0nd")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
parameters/StateMachine/conditions/attack = false
parameters/StateMachine/BlendSpace1D/blend_position = 0.0

[node name="Hitbox" type="CollisionShape3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_ml447")

[node name="Hurtbox" type="CollisionShape3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_ml447")
